# 3D-Voronoi-GPU

./: CMakeLists.txt  README.md  knearests.cu  knearests.h  params.h  stopwatch.h  test_voronoi.cu  voronoi.cu  voronoi.h  voronoi_defs.h
data/: joint.tet  joint.xyz
